update endpoints in apis
