# server/src/routers/swagger.json
@@ -19,6 +19,19 @@
     "produces": [
         "application/json"
     ],
+    "securityDefinitions": {
+
+        "Bearer": {
+        
+        "type": "apiKey",
+        
+        "name": "Authorization",
+        
+        "in": "header"
+        
+        }
+        
+        },
     "paths": {
         "/users/login": {
             "post": {
@@ -110,8 +123,11 @@
                 }
             }
         },
-        "/users/me": {
+        "/users/me/update": {
+           
+
             "patch": {
+                "security": [{"Bearer":[]}],
                 "parameters": [
                     {
                         "name": "body",
@@ -163,6 +179,7 @@
         },
         "/users/me": {
             "get": {
+                "security": [{"Bearer":[]}],
                 "tags": [
                     "Users"
                 ],
@@ -182,6 +199,7 @@
         },
         "/users/managerList": {
             "get": {
+                "security": [{"Bearer":[]}],
                 "tags": [
                     "Admin"
                 ],
@@ -201,6 +219,7 @@
         },
         "/users/setManagerStatus": {
             "post": {
+                "security": [{"Bearer":[]}],    
                 "parameters": [
                     {
                         "name": "body",
